fix: remove custom scrollbar on safari

--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -14,18 +14,6 @@ body
   background: rgba(#000, .8)
   color: #fff
 
-::-webkit-scrollbar
-  width: 14px
-
-::-webkit-scrollbar-thumb
-  background: #000
-
-  &:hover
-    background: rgba(#000, .8)
-
-::-webkit-scrollbar-track
-  background: #fff
-
 h1, h2, h3, h4, h5, h6
   margin: 0
 
